Fix multi-image, desktop viewing
- Scrolling on tiny desktop screens isn't borked anymore.
- Multiple images looks bad, but mayhaps there is little other choice at the moment
- The ad banner should be set to automatically scale in the php rather than the current method. (or at the very least add a new class to it so it can be corrected in CSS)

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,7 +2,8 @@ html,
 body {
   margin:auto;
   max-width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 body {
@@ -317,7 +318,7 @@ div.post div.body {
 div.post.reply {
   background: #D6DAF0;
   margin: 1px auto;
-  padding: 4px auto;
+  padding: 8px;
   border-width: 1px;
   border-style: none solid solid none;
   border-color: #B7C5D9;
@@ -1018,7 +1019,8 @@ span.pln {
 @media screen and (min-width: 768px) {
   html,
   body {
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: auto;
   }
 
   form table {
